# craigpy

./: .gitignore  README.md  plan-python.md  plan-ts.md  pyproject.toml
.claude/skills/application-review/: SKILL.md
.claude/skills/application-review/assets/: agent-context.md  report-template.md  research-schema.json  sample-research.json
.claude/skills/application-review/references/: diagram-patterns.md  extraction-patterns.md
.claude/skills/application-review/references/views/: compliance.md  context-view.md  deployment-view.md  development-view.md  functional-view.md  perspectives.md  tech-debt.md
.claude/skills/application-review/scripts/: quick-scan.sh  verify-all.sh  verify-dependencies.sh
src/craigpy/: __init__.py
src/craigpy/chunking/: __init__.py  interface.py
src/craigpy/chunking/heuristic/: generic.py  go.py  java.py  python_lang.py  typescript.py
src/craigpy/cli/: inspect.py  main.py
src/craigpy/config/: settings.py
src/craigpy/db/: client.py  migrations.py  queries.py
src/craigpy/indexer/: differ.py  file_filter.py  merkle.py  pipeline.py
src/craigpy/mcp/: server.py
